# finance-aggregator-desktop

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: accounts.rs  assets.rs  exchange.rs  incomes.rs  mod.rs  profits.rs  transactions.rs
src-tauri/src/db/: connection.rs  schema.rs
src-tauri/src/models/: account.rs  asset.rs  income.rs  mod.rs  transaction.rs
src/components/accounts/: account-form.tsx
src/components/assets/: asset-form.tsx
src/components/charts/: asset-by-currency-chart.tsx  asset-trend-chart.tsx
src/components/incomes/: income-form.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/components/profits/: profit-table.tsx
src/components/transactions/: transaction-form.tsx
src/contexts/: sidebar-context.tsx
src/lib/: exchange-cache.ts  tauri.ts
src/pages/: Accounts.tsx  Assets.tsx  BatchAssets.tsx  Dashboard.tsx  Incomes.tsx  Reports.tsx  Transactions.tsx
