[package]
name = "finance-aggregator-desktop"
version = "0.1.0"
description = "躺盈记账 - 个人资产收益追踪工具"
authors = ["panghux"]
edition = "2021"

[lib]
name = "finance_aggregator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
rust_decimal = "1"
rust_decimal_macros = "1"
ureq = { version = "2", features = ["json"] }

